# crucible

./: .gitignore  AGENTS.md  ASSURANCE.md  CHANGELOG.md  Cargo.toml  README.md  after-install.md  dist-workspace.toml
.cargo/: mutants.toml
.claude-plugin/: marketplace.json  plugin.json
.crucible/: acceptance.json  adapter.json  approvals.json  charter.json  coverage.json  flake.json  mutation.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
checks/: check-proof-suite.sh  check-test-smells.sh
commands/: crucible-check.toml  crucible-config.toml  crucible-doctor.toml  crucible-harden.toml  crucible-init.toml  crucible-run.toml  crucible.toml
docs/: ADOPTING.md  ENFORCEMENT_CHARTER.md  GETTING_STARTED.md  METHODOLOGY.md  POSITIONING.md  PROOFS.md  README.md  RELEASE.md  RESOURCES.md
examples/: README.md  battlemage.acceptance.json  battlemage.adapter.json  battlemage.charter.json  battlemage.mutation.json  large-app.acceptance.json  large-app.adapter.json
examples/demo/: README.md  demo.sh  mutants-capture.txt
examples/demo/.crucible/: acceptance.json  adapter.json  approvals.json  charter.json  mutation.json
examples/demo/.githooks/: pre-push
examples/demo/app/: app.sh  core.test.ts  core.ts
examples/demo/checks/: check-no-eval.sh
examples/demo/scripts/: verify.sh
examples/proof/mutation-crate/: Cargo.toml
examples/proof/mutation-crate/src/: lib.rs
hooks/: claude-codex-hooks.json
schema/: acceptance.schema.json  adapter.schema.json  charter.schema.json  mutation.schema.json
scripts/: coverage.sh  mutate-diff.sh  verify.sh
skills/crucible/: POLICY.md  SKILL.md
src/: admission.rs  admission_tests.rs  approve.rs  approve_tests.rs  cgroup.rs  cgroup_tests.rs  charter.rs  charter_tests.rs  config.rs  coverage.rs  coverage_tests.rs  doctor.rs  doctor_tests.rs  flake.rs  flake_tests.rs  hash.rs  hook.rs  hook_tests.rs  init.rs  init_tests.rs  main.rs  main_tests.rs  mask.rs  mask_tests.rs  mutation.rs  mutation_tests.rs  pre_push.rs  pre_push_tests.rs  proc.rs  reality.rs  reality_tests.rs  smells.rs  smells_tests.rs
templates/: adversarial-verify.order.toml  checker.template.mjs
tests/: benchmark.rs  cli.rs  demo.rs  proof.rs
tests/fixtures/: cargo-mutants-real.txt
