[package]
name = "crucible"
version = "0.1.0"
edition = "2024"
description = "Honesty layer for your tests: check gates, run the real app, harden with mutation, catch hollow tests."
license = "MIT"
repository = "https://github.com/thomgardiner/crucible"
homepage = "https://github.com/thomgardiner/crucible"
readme = "README.md"
publish = false

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
regex = "1"
walkdir = "2"
tempfile = "3"
rustc-demangle = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dist]
inherits = "release"

[package.metadata.dist]
dist = true
# Shown after the shell/powershell installer finishes.
install-success-msg = """
crucible is on PATH. Next:

  cd your-project
  crucible init
  crucible approve smoke --by \"$USER\"
  crucible approve __config__ --by \"$USER\"
  crucible doctor && crucible check

Docs: https://github.com/thomgardiner/crucible#readme
"""
